<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_SnackBar_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorAccentDark"
        android:textSize="45sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textWebPassword"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edittext_hint"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/email_signup"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edittext_hint"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/emp_id_signup"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emp_id"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edittext_hint"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password_signup"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edittext_hint"
            android:textSize="24sp" />

        <Button
            android:id="@+id/signup"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccentDark"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/or_signin_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/to_signin"
            style="@style/AppTheme.Button.Sec"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/gray_bg"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/password_rules_textview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:background="@drawable/tooltip_bg"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-condensed"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/password_rules"
        android:textAllCaps="false"
        android:textColor="#fe4c0000"
        android:textSize="14sp"
        android:visibility="visible" />

    <View
        android:id="@+id/progress_overlay_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/offwhite"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar_signup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>