<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/create_not_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColorHint="@color/edittext_hint" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textColorHint="@color/edittext_hint" />

</LinearLayout>